--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -1,19 +1,7 @@
-<!DOCTYPE html>
-<html>
-    <head> 
-        <meta charset="utf-8">
-        <title>Home page</title>
-        
-        <style>
 
-        h1 {
-        color:#004225;
-        font:montserrat extrabold;
-        font-size: 36pt
-    }
+<style>
+
+        h1{color:#004225;}
+        h1{font:montserrat extrabold;}
+        h1{font-size: 36pt;}
         
-        <link rel="stylesheet" 
-        href="style.css">
-        
-</head>
-<body>
