--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -1,7 +1,12 @@
-
-<style>
-
-        h1{color:#004225;}
-        h1{font:montserrat extrabold;}
-        h1{font-size: 36pt;}
+h1 {
+    color:#004225;
+}
+        
+h1 {
+    font:montserrat extrabold;
+}
+       
+h1 {
+    font-size: 36pt;
+}
         
