--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -7,3 +7,28 @@ ul li {
     margin-top: 0;
     margin-left: 10px;
     }
+
+    /*format all navigation <a> elements*/
+nav a:link{
+    background-color: #D9E3DF;
+    }
+    nav a:hover, nav a:focus {
+    background-color: #D9E3DF;
+    }
+    nav a:active{
+    background-color: #D9E3DF;
+    }
+    
+    
+    /*position sub-menu or drop-down*/
+    nav ul>li ul {
+    position: absolute;
+    margin-top: 0;
+    margin-left: 100%;
+    display: none;
+    }
+    
+    /*special hover to display the drop-down*/
+    nav>ul>li:hover>ul{
+    display: block;
+    }
