--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -24,11 +24,11 @@ nav a:link{
     nav ul>li ul {
     position: absolute;
     margin-top: 0;
-    margin-left: 100%;
-    display: list-item;
+    margin-left: 10px;
+    display: inline-block;
     }
     
     /*special hover to display the drop-down*/
     nav>ul>li:hover>ul{
-    display: list-item;
+    display: inline-block;
     }
