--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -22,6 +22,7 @@ nav a:link{
     /*position sub-menu or drop-down*/
    nav ul>li ul {
     position: absolute;
+    padding: 15px 15px 15px 25px;
     margin-top: 0;
     margin-left: 10px;
     display: block;
@@ -29,6 +30,7 @@ nav a:link{
     
     /*special hover to display the drop-down*/
     nav>ul>li:hover>ul{
+    padding: 15px 15px 15px 25px;
     margin-top: 0;
     margin-left: 10px;
     display: block;
