--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -12,7 +12,7 @@ nav>ul li {
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
     text-align: center;
     font-weight: bold;
-    color: #004225;
+    color: #000000;
     float: left;
 }
 nav a {
@@ -32,7 +32,7 @@ nav a:hover, nav a:focus {
     background-color: #D9E3DF;
 }
 nav a:active{
-    background-color: #D9E3DF;
+    background-color:  #004225;
 }
 
 /*position sub-menu or drop-down*/
