--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,11 +1,15 @@
 ul li {
     display: inline-block;
     border: solid #004225;
+    background-color:  #004225;
     width: 150px;
     list-style-type: none;
     padding: 15px 15px 15px 25px;
     margin-top: 0;
     margin-left: 10px;
+    text-align: center;
+    font-weight: bold;
+    color: #000000;
 }
 
 nav a {
