--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -7,9 +7,6 @@ ul li {
     padding: 15px 15px 15px 25px;
     margin-top: 0;
     margin-left: 10px;
-    text-align: center;
-    font-weight: bold;
-    color: #000000;
 }
 
 nav a {
@@ -21,16 +18,46 @@ nav a {
     margin: 10px;
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
 }
+/*set the active page class to any <li> that has the class*/
+.active a:link {
+    background-color: #D9E3DF;
+}
+
+/*format and position the main navigation menu*/
+nav {
+    top: 0px;   
+}
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+nav>ul li {
+    position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
+    text-align: center;
+    font-weight: bold;
+    color:#004225;
+    float: left;
+}
+nav a {
+    text-decoration: none;
+    display: inline-block;
+    background-color:#004225;
+    border: solid #004225;
+    padding: 15px 15px 15px 15px;
+    width: 150px; /*this is important to set so our drop-down doesn't go across the page*/
+    margin: 2px;
+}
 
 /*format all navigation <a> elements*/
 nav a:link{
-    background-color: #D9E3DF;
+    background-color:#D9E3DF;
 }
 nav a:hover, nav a:focus {
     background-color: #D9E3DF;
 }
 nav a:active{
-    background-color:  #004225;
+    background-color:#004225;
 }
 
 /*position sub-menu or drop-down*/
