--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -36,7 +36,7 @@ nav>ul li {
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
     text-align: center;
     font-weight: bold;
-    color:#004225;
+    color:#959A98;
     float: left;
 }
 nav a {
