--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -8,7 +8,7 @@ ul li {
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
     text-align: center;
     font-weight: bold;
-    color:white;
+    color: #004225;
     float: left;
 }
 
