--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -44,7 +44,7 @@ nav a:link{
     background-color:#D9E3DF;
 }
 nav a:hover, nav a:focus {
-    background-color: #D9E3DF;
+    background-color:#004225;
 }
 nav a:active{
     background-color:#004225;
