--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,6 +1,8 @@
 ul li {
     text-decoration: none;
     display: inline-block;
+    border: solid #004225;
+    background-color:#004225;
     padding: 15px 15px 15px 25px;
     width: 150px; /*this is important to set so our drop-down doesn't go across the page*/
     margin-top: 0;
@@ -8,7 +10,6 @@ ul li {
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
     text-align: center;
     font-weight: bold;
-    color: #004225;
 }
 
 .active a:link {
