--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,8 +1,7 @@
-ul li {
+nav ul li {
     text-decoration: none;
     display: inline-block;
     border: solid #004225;
-    background-color:#004225;
     padding: 15px 15px 15px 25px;
     width: 150px; /*this is important to set so our drop-down doesn't go across the page*/
     margin-top: 0;
@@ -41,7 +40,7 @@ nav a {
 
 /*format all navigation <a> elements*/
 nav a:link{
-    background-color:#D9E3DF;
+    background-color: #004225;
 }
 nav a:hover, nav a:focus {
     background-color:#004225;
