--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,32 +1,34 @@
 ul li {
-    text-decoration: none;
     display: inline-block;
     border: solid #004225;
-    padding: 15px 15px 15px 25px;
-    width: 150px; /*this is important to set so our drop-down doesn't go across the page*/
-    margin-top: 0;
-    margin-left: 10px;
-    position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
+    background-color:#004225;
+    width: 150px;
+    list-style-type: none;
     text-align: center;
     font-weight: bold;
-    float: left;
+    color:white;
+    padding: 15px 15px 15px 25px;
+    margin-top: 0;
+    margin-left: 10px;
+
+}
+
+.active a:link {
+    background-color:#D9E3DF; 
 }
 
 nav>ul li {
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
     text-align: center;
     font-weight: bold;
+    color:white;
     float: left;
-}
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
 }
 
 nav a {
     text-decoration: none;
     display: inline-block;
+    border: solid #004225;
     padding: 15px 15px 15px 25px;
     width: 150px; /*this is important to set so our drop-down doesn't go across the page*/
     margin-top: 0;
@@ -36,13 +38,20 @@ nav a {
 
 /*format all navigation <a> elements*/
 nav a:link{
-    background-color: #004225;
+    background-color:#D9E3DF;
 }
 nav a:hover, nav a:focus {
-    background-color:#004225;
+    background-color: #D9E3DF;
 }
 nav a:active{
     background-color:#004225;
+}
+nav>a:link{
+    position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
+    text-align: center;
+    font-weight: bold;
+    color:white;
+    float: left;
 }
 
 /*position sub-menu or drop-down*/
