--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -13,10 +13,6 @@ ul li {
 
 }
 
-.active a:link {
-    background-color:#D9E3DF; 
-}
-
 nav>ul li {
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
     text-align: center;
@@ -43,7 +39,9 @@ nav a:link{
 nav a:hover, nav a:focus {
     background-color: #D9E3DF;
 }
-
+nav a:active{
+    background-color:#004225;
+}
 nav>a:link{
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
     text-align: center;
