--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,6 +1,6 @@
 ul li {
     display: inline-block;
-    border: solid #D9E3DF;
+    border: solid #004225;
     background-color:#D9E3DF;
     width: 150px;
     list-style-type: none;
