--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,4 +1,5 @@
 #navigation-home {
+nav>ul li {
     display: inline-block;
     border: solid #004225;
     background-color:#D9E3DF;
@@ -10,7 +11,7 @@
     padding: 15px 15px 15px 25px;
     margin-top: 0;
     margin-left: 10px;
-
+}
 }
 
 #navigation-project {
