--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -23,7 +23,7 @@ nav>ul li {
     color:black;
     float: left;
 }
-
+#navigation-project {
 nav a {
     text-decoration: none;
     display: inline-block;
@@ -34,17 +34,23 @@ nav a {
     margin-left: 10px;
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
 }
-
+}
+#navigation-project {
 /*format all navigation <a> elements*/
 nav a:link{
     background-color:#D9E3DF;
 }
+#navigation-project {
 nav a:hover, nav a:focus {
     background-color: #D9E3DF;
 }
+}
+#navigation-project {
 nav a:active{
     background-color:#004225;
 }
+}
+#navigation-project {
 nav>a:link{
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
     text-align: center;
@@ -52,17 +58,21 @@ nav>a:link{
     color:white;
     float: left;
 }
-
+}
+#navigation-project {
 /*position sub-menu or drop-down*/
 nav ul>li ul {
     position: absolute;
     top: 100%;
     display: none;
 }
+}
+#navigation-project {
 nav ul ul li {
     float:none;
 }
-
+}
+#navigation-project {
 /*special hover to display the drop-down*/
 nav>ul>li:hover>ul{
     display: block;
