--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,4 +1,4 @@
-#navigation-home {
+.navigation.home{
 ul li {
     display: inline-block;
     border: solid #004225;
@@ -13,8 +13,7 @@ ul li {
     margin-left: 10px;
 }
 }
-
-#navigation-project {
+.navigation.project{
 nav>ul li {
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
     text-align: center;
@@ -23,7 +22,7 @@ nav>ul li {
     color:black;
     float: left;
 }
-#navigation-project {
+
 nav a {
     text-decoration: none;
     display: inline-block;
@@ -34,23 +33,17 @@ nav a {
     margin-left: 10px;
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
 }
-}
-#navigation-project {
+
 /*format all navigation <a> elements*/
 nav a:link{
     background-color:#D9E3DF;
 }
-#navigation-project {
 nav a:hover, nav a:focus {
     background-color: #D9E3DF;
 }
-}
-#navigation-project {
 nav a:active{
     background-color:#004225;
 }
-}
-#navigation-project {
 nav>a:link{
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
     text-align: center;
@@ -58,21 +51,18 @@ nav>a:link{
     color:white;
     float: left;
 }
-}
-#navigation-project {
+
 /*position sub-menu or drop-down*/
 nav ul>li ul {
     position: absolute;
     top: 100%;
     display: none;
 }
-}
-#navigation-project {
+
 nav ul ul li {
     float:none;
 }
-}
-#navigation-project {
+
 /*special hover to display the drop-down*/
 nav>ul>li:hover>ul{
     display: block;
