--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,24 +1,18 @@
-ul li {
-    display: inline-block;
-    border: solid #004225;
-    background-color:#D9E3DF;
-    width: 150px;
-    list-style-type: none;
-    text-align: center;
-    font-weight: bold;
-    color:black;
-    padding: 15px 15px 15px 25px;
-    margin-top: 0;
-    margin-left: 10px;
-}
 
 nav>ul li {
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
     text-align: center;
-    list-style-type: none;
     font-weight: bold;
-    color:black;
-    float: left;
+    display: inline-block;
+    background-color:#004225;
+    width: 150px;
+    list-style-type: none;
+    text-align: center;
+    font-weight: bold;
+    padding: 15px 15px 15px 25px;
+    margin-top: 0;
+    margin-left: 10px;
+
 }
 
 nav a {
@@ -42,21 +36,13 @@ nav a:hover, nav a:focus {
 nav a:active{
     background-color:#004225;
 }
-nav>a:link{
-    position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
-    text-align: center;
-    font-weight: bold;
-    color:white;
-    float: left;
-}
 
 /*position sub-menu or drop-down*/
 nav ul>li ul {
-    position: absolute;
+    position: static;
     top: 100%;
     display: none;
 }
-
 nav ul ul li {
     float:none;
 }
@@ -65,3 +51,4 @@ nav ul ul li {
 nav>ul>li:hover>ul{
     display: block;
 }
+
