--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -22,6 +22,7 @@ nav a {
     width: 150px; /*this is important to set so our drop-down doesn't go across the page*/
     margin-top: 0;
     margin-left: 10px;
+    float: left
     position: relative; /*we must add a position to our main navigation bar so we can position a drop-down properly */
 }
 
@@ -32,13 +33,10 @@ nav a:link{
 nav a:hover, nav a:focus {
     background-color: #D9E3DF;
 }
-nav a:active{
-    background-color:#004225;
-}
 
 /*position sub-menu or drop-down*/
 nav ul>li ul {
-    position: static;
+    position: relative;
     top: 100%;
     display: none;
 }
