--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -18,6 +18,7 @@ nav a {
     text-decoration: none;
     display: inline-block;
     border: solid #004225;
+    border-radius: 80px
     padding: 15px 15px 15px 15px;
     width: 150px; /*this is important to set so our drop-down doesn't go across the page*/
     margin-top: 0;
@@ -47,5 +48,6 @@ nav ul ul li {
 /*special hover to display the drop-down*/
 nav>ul>li:hover>ul{
     display: block;
+    border-radius: 80px
 }
 
