--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -6,6 +6,7 @@ nav>ul li {
     display: inline-block;
     width: 150px;
     list-style-type: none;
+    text-color: #959A98;
     text-align: center;
     font-weight: bold;
     padding: 15px 15px 15px 15px;
@@ -18,7 +19,7 @@ nav a {
     text-decoration: none;
     display: inline-block;
     border: solid #004225;
-    border-radius: 80px
+    border-radius: round;
     padding: 15px 15px 15px 15px;
     width: 150px; /*this is important to set so our drop-down doesn't go across the page*/
     margin-top: 0;
@@ -48,6 +49,6 @@ nav ul ul li {
 /*special hover to display the drop-down*/
 nav>ul>li:hover>ul{
     display: block;
-    border-radius: 80px
+    border-radius: round;
 }
 
