--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -9,7 +9,7 @@ nav>ul li {
     text-color: #959A98;
     text-align: center;
     font-weight: bold;
-    padding: 15px 15px 15px 15px;
+    padding: 15px 15px 15px 25px;
     margin-top: 0;
     margin-left: 10px;
 
@@ -19,8 +19,8 @@ nav a {
     text-decoration: none;
     display: inline-block;
     border: solid #004225;
-    border-radius: round;
-    padding: 15px 15px 15px 15px;
+    border-radius: 35px;
+    padding: 15px 15px 15px 25px;
     width: 150px; /*this is important to set so our drop-down doesn't go across the page*/
     margin-top: 0;
     margin-left: 10px;
@@ -49,6 +49,6 @@ nav ul ul li {
 /*special hover to display the drop-down*/
 nav>ul>li:hover>ul{
     display: block;
-    border-radius: round;
+    border-radius: 35px;
 }
 
