--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -4,6 +4,7 @@ nav>ul li {
     text-align: center;
     font-weight: bold;
     display: inline-block;
+    border-radius: 35px;
     width: 150px;
     list-style-type: none;
     text-color: #959A98;
