--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -32,10 +32,10 @@ nav a {
 
 /*format all navigation <a> elements*/
 nav a:link{
-    background-color:#D9E3DF;
+    background-color:#004225;
 }
 nav a:hover, nav a:focus {
-    background-color: #D9E3DF;
+    background-color: #004225;
 }
 
 /*position sub-menu or drop-down*/
