--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -8,6 +8,7 @@ nav>ul li {
     width: 150px;
     list-style-type: none;
     color: #959A98;
+    background-color:#004225;
     text-align: center;
     font-weight: bold;
     padding: 15px 15px 15px 25px;
@@ -20,6 +21,7 @@ nav a {
     text-decoration: none;
     display: inline-block;
     border: solid #004225;
+    background-color:#004225;
     color: #959A98;
     border-radius: 25px;
     padding: 15px 15px 15px 25px;
@@ -52,6 +54,7 @@ nav ul ul li {
 nav>ul>li:hover>ul{
     display: block;
     border-radius: 25px;
+    background-color:#004225;
     color: #959A98;
 }
 
