--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -13,8 +13,8 @@ all-text {font-family: Montserrat;}
   body {
     margin: 40px;
     font-family: 'Open Sans', 'sans-serif';
-    background-color: #fff;
-    color: #444;
+    background-color: #D9E3DF;
+    color: Black;
   }
   
   h1, p {
@@ -55,8 +55,8 @@ all-text {font-family: Montserrat;}
   }
   
   .wrapper > * {
-    background-color: #444;
-    color: #fff;
+    background-color: white;
+    color: black;
     border-radius: 5px;
     padding: 20px;
     font-size: 150%;
