--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -29,11 +29,11 @@ footer {
   
   @media screen and {min-width: 500px} 
   
-    .content {
-      float: right;
-      width: 79.7872%;
+    /* no grid support? */
+    .sidebar {
+      float: left;
+      width: 19.1489%;
     }
-  
     .wrapper {
       margin: 0 auto;
       grid-template-columns: 1fr 3fr;
