--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -1,4 +1,4 @@
-#heading1 {color:#004225;}
+#header {color:#004225;}
 .paragraph {text-indent: 30px;}
 footer {
     position: fixed
@@ -29,11 +29,15 @@ footer {
   
   @media screen and {min-width: 500px} 
   
-    /* no grid support? */
     .sidebar {
       float: left;
       width: 19.1489%;
     }
+
+.content {
+  float: right;
+  width: 79.7872%;
+}
     .wrapper {
       margin: 0 auto;
       grid-template-columns: 1fr 3fr;
@@ -41,7 +45,6 @@ footer {
     
     .header, .footer {
       grid-column: 1 / -1;
-      /* needed for the floated layout */
       clear: both;
     }
 
@@ -51,11 +54,9 @@ footer {
     border-radius: 5px;
     padding: 20px;
     font-size: 150%;
-    /* needed for the floated layout*/
     margin-bottom: 10px;
   }
   
-  /* We need to set the widths used on floated items back to auto, and remove the bottom margin as when we have grid we have gaps. */
   @supports {display: grid} 
     .wrapper > * {
       width: auto;
