--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -12,7 +12,7 @@ footer {
   body {
     margin: 40px;
     font-family: 'Open Sans', 'sans-serif';
-    background-color: white;
+    background-color: #fff;
     color: black;
   }
   
@@ -27,10 +27,10 @@ footer {
     grid-gap: 10px;
   }
   
-  @media screen and (min-width: 600px) 
+  @media screen and (min-width: 500px) {
   
     /* no grid support? */
-    .block-a, .block-b, .block-c {
+    .sidebar {
       float: left;
       width: 19.1489%;
     }
@@ -43,7 +43,6 @@ footer {
     .wrapper {
       margin: 0 auto;
       grid-template-columns: 1fr 3fr;
-      grid-auto-rows: minmax(150px, auto);
     }
     
     .header, .footer {
@@ -51,31 +50,23 @@ footer {
       /* needed for the floated layout */
       clear: both;
     }
-    
-    .block-a {
-      grid-column: 1;
-      grid-row: 2;
-    }
-    .content {
-        grid-column: 2;
-        grid-row: 2 / 7;
-      }
-    
-    
+  
+  }
+  
+  .wrapper > * {
+    background-color: #D9E3DF;
+    color: black;
+    border-radius: 5px;
+    padding: 20px;
+    font-size: 150%;
+    /* needed for the floated layout*/
+    margin-bottom: 10px;
+  }
+  
+  /* We need to set the widths used on floated items back to auto, and remove the bottom margin as when we have grid we have gaps. */
+  @supports (display: grid) {
     .wrapper > * {
-      background-color: #D9E3DF;
-      color: black;
-      border-radius: 5px;
-      padding: 20px;
-      font-size: 150%;
-      /* needed for the floated layout*/
-      margin-bottom: 10px;
+      width: auto;
+      margin: 0;
     }
-    
-    /* We need to set the widths used on floated items back to auto, and remove the bottom margin as when we have grid we have gaps. */
-    @supports (display: grid) {
-      .wrapper > * {
-        width: auto;
-        margin: 0;
-      }
-    }
+  }
