--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -20,10 +20,10 @@ nav a {
     text-decoration: none;
     display: inline-block;
     border: solid #004225;
-    color: white;
+    color: #959A98;
     border-radius: 25px;
     padding: 15px 15px 15px 25px;
-    width: 150px; /*this is important to set so our drop-down doesn't go across the page*/
+    width: 160px; /*this is important to set so our drop-down doesn't go across the page*/
     margin-top: 0;
     margin-left: 0px;
     float: left
@@ -52,6 +52,6 @@ nav ul ul li {
 nav>ul>li:hover>ul{
     display: block;
     border-radius: 25px;
-    color: white;
+    color: #959A98;
 }
 
