--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -20,7 +20,7 @@ nav a {
     text-decoration: none;
     display: inline-block;
     border: solid #004225;
-    color: #959A98;
+    color: white;
     border-radius: 25px;
     padding: 15px 15px 15px 25px;
     width: 160px; /*this is important to set so our drop-down doesn't go across the page*/
@@ -52,6 +52,6 @@ nav ul ul li {
 nav>ul>li:hover>ul{
     display: block;
     border-radius: 25px;
-    color: #959A98;
+    color:white;
 }
 
