--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -4,49 +4,68 @@ footer {
     position: fixed
 }
 
-body {
-    margin: 40px;
+*, *:before, *:after {
+    box-sizing: border-box;
   }
   
-  .sidebar {
-      grid-area: sidebar;
+  body {
+    margin: 40px;
+    font-family: 'Open Sans', 'sans-serif';
+    background-color: #fff;
+    color: #444;
+  }
+  
+  h1, p {
+    margin: 0 0 1em 0;
+  }
+  
+  .wrapper {
+    max-width: 940px;
+    margin: 0 20px;
+    display: grid;
+    grid-gap: 10px;
+  }
+  
+  @media screen and (min-width: 500px) {
+  
+    /* no grid support? */
+    .sidebar {
+      float: left;
+      width: 19.1489%;
     }
   
     .content {
-      grid-area: content;
+      float: right;
+      width: 79.7872%;
     }
-  
-    .header {
-      grid-area: header;
-    }
-  
-    .footer {
-      grid-area: footer;
-    }
-  
   
     .wrapper {
-      display: grid;
-      grid-gap: 10px;
-      grid-template-columns: 120px 120px 120px;
-      grid-template-areas:
-      "....... header header"
-      "sidebar content content"
-      "footer  footer  footer";
-      background-color: #D9E3DF;
-      color: black;
+      margin: 0 auto;
+      grid-template-columns: 1fr 3fr;
+    }
+    
+    .header, .footer {
+      grid-column: 1 / -1;
+      /* needed for the floated layout */
+      clear: both;
     }
   
-  
-  .box {
-    background-color: #D9E3DF;
-    color:black;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 100%;
   }
   
-  .header,
-  .footer {
-    background-color: #D9E3DF;
+  .wrapper > * {
+    background-color: #444;
+    color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    font-size: 150%;
+    /* needed for the floated layout*/
+    margin-bottom: 10px;
+  }
+  
+  /* We need to set the widths used on floated items back to auto, and remove the bottom margin as when we have grid we have gaps. */
+  @supports (display: grid) {
+    .wrapper > * {
+      width: auto;
+      margin: 0;
+    }
   }
