--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -12,7 +12,7 @@ body {
   margin: 40px;
   font-family: 'Open Sans', 'sans-serif';
   background-color: #fff;
-  color: #D9E3DF;
+  color: black;
 }
 
 h1, p {
