--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -46,6 +46,7 @@ h1, p {
     grid-column: 1 / -1;
     /* needed for the floated layout */
     clear: both;
+    text-align: center;
 
   }
 
@@ -56,7 +57,7 @@ h1, p {
   color: black;
   border-radius: 5px;
   padding: 20px;
-  font-size: 150%;
+  font-size: 100%;
   /* needed for the floated layout*/
   margin-bottom: 10px;
 }
