--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -49,6 +49,12 @@ h1, p {
     text-align: center;
 
   }
+
+  img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+  }
   
 .footer {
   font-size: 40%;
