--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -8,7 +8,7 @@
 
 body {
   margin: 40px;
-  font-family: 'Open Sans', 'sans-serif';
+  font-family: 'Montserrat';
   background-color: #fff;
   color: black;
 }
