--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -35,14 +35,14 @@ h1, p {
 
   .container {
  display: grid;
- align-items: center; 
- grid-template-columns: 1fr 1fr 1fr;
+ align-items: left; 
+ grid-template-columns: sidebar;
  column-gap: 5px;
 }
 
 img {
-  max-width: 100%;
-  max-height:100%;
+  max-width: 50%;
+  max-height: 50%;
 }
 
   .content {
