--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -41,8 +41,10 @@ h1, p {
 }
 
 img {
-  max-width: 100%;
-  max-height: 100%;
+display: grid;
+align-items: left; 
+grid-template-columns: sidebar;max-width: 100%;
+max-height: 100%;
 }
 
   .content {
