--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -49,7 +49,7 @@ nav ul ul li {
 
 /*special hover to display the drop-down*/
 nav>ul>li:hover>ul{
-    display: inline;
+    display: block;
     border-radius: 25px;
     color:white;
 }
