--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -10,7 +10,7 @@ body {
   margin: 40px;
   font-family: 'Montserrat';
   font-style: normal;
-  background-color: #fff;
+  background-color: #D9E3DF;
   color: black;
 }
 
