--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -8,7 +8,7 @@
 
 body {
   margin: 40px;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
   font-style: normal;
   background-color: #D9E3DF;
   color: black;
