--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
 }
 
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 body {
   margin: 40px;
   font-family: 'Montserrat', sans-serif;
