--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -51,6 +51,13 @@ align-items: left;
 grid-template-columns: sidebar;max-width: 100%;
 max-height: 100%;
 }
+  video {
+display: grid;
+align-items: center; 
+grid-template-columns: sidebar;max-width: 100%;
+max-height: 100%;
+  }
+    
 
   .content {
     float: right;
