--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -51,7 +51,8 @@ align-items: left;
 grid-template-columns: sidebar;max-width: 100%;
 max-height: 100%;
 }
-  video {
+  
+.video {
 display: grid;
 align-items: center; 
 grid-template-columns: sidebar;max-width: 100%;
