--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -5,6 +5,19 @@
 *, *:before, *:after {
   box-sizing: border-box;
 }
+@media print {
+    header, footer, aside, form, … {
+    display: all;
+  }
+  article {
+    width:100%!important;
+    padding:0!important;
+    margin:0!important;
+  }
+}
+@page {
+  margin: 1in;
+}
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 body {
