--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -71,7 +71,11 @@ align-items: center;
 grid-template-columns: sidebar;max-width: 100%;
 max-height: 100%;
   }
-    
+
+  .istyle:hover {
+    font-size: 20px; 
+  }
+
 
   .content {
     float: right;
