--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -102,9 +102,9 @@ max-height: 100%;
   }
   
 .footer {
-  font-size: 80%;
+  font-size: 60%;
   text-align: center;
-  background:-image: url(kefr7t.github.io/islt_7310/jade.jpg);
+  background:-image: url(https://kefr7t.github.io/islt_7310/jade.jpg);
   backgroud-repeat: no-repeat;
   background-size: cover;
 }
