--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -105,6 +105,7 @@ max-height: 100%;
   font-size: 60%;
   text-align: center;
   background-image: url(https://kefr7t.github.io/islt_7310/jade.jpg);
+  background-position: center center;
   backgroud-repeat: no-repeat;
   background-size: cover;
 }
