--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -108,6 +108,11 @@ max-height: 100%;
   background-position: center center;
   backgroud-repeat: no-repeat;
   background-size: cover;
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .wrapper > * {
