--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -108,6 +108,8 @@ max-height: 100%;
   background-position: center center;
   backgroud-repeat: no-repeat;
   background-size: cover;
+    padding-left: 15px;
+  padding-right: 15px;
 
 }
 
