--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -103,16 +103,17 @@ max-height: 100%;
   
 .footer {
   font-size: 60%;
-  text-align: center;
+  text-align: left;
   background-image: url(https://kefr7t.github.io/islt_7310/jade.jpg);
   background-position: center center;
   backgroud-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
     padding-left: 15px;
   padding-right: 15px;
    max-width: 1170px;
 
 }
+  
 
 .wrapper > * {
   background-color: white;
