--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -107,7 +107,7 @@ max-height: 100%;
   background-image: url(https://kefr7t.github.io/islt_7310/jade.jpg);
   background-position: center center;
   backgroud-repeat: no-repeat;
-  background-size: auto;
+  background-size: 1170px;
     padding-left: 15px;
   padding-right: 15px;
    max-width: 1170px;
