--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -104,14 +104,16 @@ max-height: 100%;
 .footer {
   font-size: 60%;
   text-align: center;
-  display: flex;
-  flex-direction: row;
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   background-image: url(https://kefr7t.github.io/islt_7310/jade.jpg);
   background-position: center center;
   backgroud-repeat: no-repeat;
   padding-left: 15px;
   padding-right: 15px;
-   max-width: 1170px;
+  max-width: 1170px;
 
 }
   
