--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -164,19 +164,49 @@ input[type=submit]:hover {
   background-color: #004225;
 }
 
-/* Add a background color and some padding around the form */
-.container {
-  border-radius: 5px;
-  background-color: #D9E3DF;
-  padding: 20px;
-}
-div.scroll-container {
-  background-color: #004225;
-  overflow: auto;
-  white-space: nowrap;
-  padding: 10px;
+div.gallery {
+  border: 1px solid #004225;
 }
 
-div.scroll-container img {
-  padding: 10px;
+div.gallery:hover {
+  border: 1px solid #004225;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.responsive {
+  padding: 0 6px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
