--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -164,49 +164,90 @@ input[type=submit]:hover {
   background-color: #004225;
 }
 
-div.gallery {
-  border: 1px solid #004225;
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
 }
 
-div.gallery:hover {
-  border: 1px solid #004225;
+/* Hide the images by default */
+.mySlides {
+  display: none;
 }
 
-div.gallery img {
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: #D9E3DF;
+}
+
+/* Caption text */
+.text {
+  color: #004225;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
   width: 100%;
-  height: auto;
-}
-
-div.desc {
-  padding: 15px;
   text-align: center;
 }
 
-* {
-  box-sizing: border-box;
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #004225;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
 
-.responsive {
-  padding: 0 6px;
-  float: left;
-  width: 24.99999%;
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #D9E3DF;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-@media only screen and (max-width: 700px) {
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
+.active, .dot:hover {
+  background-color: #D9E3DF;
 }
 
-@media only screen and (max-width: 500px) {
-  .responsive {
-    width: 100%;
-  }
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
